src/test/deca/syntax/valid/cast/valid_cast_to_boolean.deca
// Description:
//    Tests a syntactically correct program for a valid cast expression to string
//
// Results:
//    No errors.
//
// History:
//    created on 07/01/2025

{
    string a = (string) (10);
}